# credit_scoring_project

./: .flake8  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
gx/: great_expectations.yml
gx/checkpoints/: credit_default_checkpoint.yml
gx/expectations/: .ge_store_backend_id  c.json  credit_default_suite.json  sample_credit.json
gx/expectations/default_data_asset_name/: warning.json
scripts/: run.sh
src/: make_sample.py
src/api/: app.py  model.py  schemas.py
src/data/: ge_validate.py  prepare_data.py  schemas.py  validate.py  validation_schema.py
src/feature/: build_features.py
src/frontend/: app.py
src/models/: metrics.py  pipeline.py  predict.py  train.py
tests/: test_data_validation.py  test_metrics.py  test_pipeline.py
tests/data/: sample_credit.csv
