[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "monolit_module"
version = "0.0.1"
description = "educational ml scoring project"
authors = [
  { name = "Roman Belyanin" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.11.0"

[tool.isort]
profile = "black"
known_first_party = ["src"]
force_sort_within_sections = true

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[[tool.poetry.packages]]
include = "src"

